--- a/Quiz.Data/Quiz.Data.csproj
+++ b/Quiz.Data/Quiz.Data.csproj
@@ -7,12 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.EntityFrameworkCore.Relational, Version=2.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
-        <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.entityframeworkcore.relational\2.1.1\lib\netstandard2.0\Microsoft.EntityFrameworkCore.Relational.dll</HintPath>
-      </Reference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1.0" />
     </ItemGroup>
     
 </Project>
