--- a/Quiz.Service/Quiz.Service.csproj
+++ b/Quiz.Service/Quiz.Service.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Quiz.Repository\Quiz.Repository.csproj" />
+      <ProjectReference Include="..\Quiz.Utils\Quiz.Utils.csproj" />
     </ItemGroup>
 
 </Project>
