added AutoMapper. added LogService. added Custom Exception handling. changes related with UserController.

--- a/Quiz.Mvc/appsettings.json
+++ b/Quiz.Mvc/appsettings.json
@@ -1,11 +1,17 @@
 {
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
+  
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
   },
+  
   "Logging": {
     "LogLevel": {
       "Default": "None",
       "Microsoft.EntityFrameworkCore": "Information"
     }
-  }
+  },
+  
 }
