--- a/Quiz.Api/appsettings.json
+++ b/Quiz.Api/appsettings.json
@@ -1,7 +1,12 @@
 {
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
+  
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
   },
+  
   "Logging": {
     "LogLevel": {
       "Default": "None",
