--- a/Quiz.Data/Quiz.Data.csproj
+++ b/Quiz.Data/Quiz.Data.csproj
@@ -9,5 +9,11 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+        <HintPath>..\..\..\..\..\..\usr\share\dotnet\sdk\NuGetFallbackFolder\newtonsoft.json\11.0.2\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
+      </Reference>
+    </ItemGroup>
     
 </Project>
