--- a/Quiz.Service/Quiz.Service.csproj
+++ b/Quiz.Service/Quiz.Service.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Quiz.Utils\Quiz.Utils.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NLog" Version="4.5.11" />
+    </ItemGroup>
+
 </Project>
