--- a/Quiz.Mvc/appsettings.json
+++ b/Quiz.Mvc/appsettings.json
@@ -4,7 +4,7 @@
   },
   
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizDB"
+    "DefaultConnection": "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
   },
   
   "Logging": {
@@ -12,6 +12,6 @@
       "Default": "None",
       "Microsoft.EntityFrameworkCore": "Information"
     }
-  },
+  }
   
 }
