--- a/Quiz.Api/Quiz.Api.csproj
+++ b/Quiz.Api/Quiz.Api.csproj
@@ -6,8 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Autofac" Version="4.9.1" />
         <PackageReference Include="AutoMapper" Version="8.0.0" />
+        <PackageReference Include="Exceptionless.AspNetCore" Version="4.3.2022" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
