--- a/Quiz.Api/appsettings.json
+++ b/Quiz.Api/appsettings.json
@@ -4,7 +4,7 @@
   },
   
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizDB"
+    "DefaultConnection": "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
   },
   
   "Logging": {
