added Nlog implementation.

--- a/Quiz.Api/appsettings.json
+++ b/Quiz.Api/appsettings.json
@@ -4,7 +4,8 @@
   },
   
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizDB",
+    "UbuntuConnection" : "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
   },
   
   "Logging": {
