--- a/Quiz.Mvc/Quiz.Mvc.csproj
+++ b/Quiz.Mvc/Quiz.Mvc.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="AutoMapper" Version="8.0.0" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Exceptionless.AspNetCore" Version="4.3.2022" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.0" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     </ItemGroup>
