--- a/Quiz.Api/Quiz.Api.csproj
+++ b/Quiz.Api/Quiz.Api.csproj
@@ -18,4 +18,20 @@
       <ProjectReference Include="..\Quiz.Service\Quiz.Service.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Log\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Log\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Log\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Log\**" />
+    </ItemGroup>
+
 </Project>
