--- a/Quiz.Api/appsettings.json
+++ b/Quiz.Api/appsettings.json
@@ -13,5 +13,11 @@
       "Default": "None",
       "Microsoft.EntityFrameworkCore": "Information"
     }
+  },
+
+  "elasticsearch": {
+    "index": "quiz",
+    "url": "http://localhost:9200/"
   }
+  
 }
