--- a/Quiz.Repository/Quiz.Repository.csproj
+++ b/Quiz.Repository/Quiz.Repository.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1.0" />
+        <PackageReference Include="NEST" Version="6.5.1" />
     </ItemGroup>
 
     <ItemGroup>
