--- a/Quiz.Api/appsettings.json
+++ b/Quiz.Api/appsettings.json
@@ -2,10 +2,11 @@
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   },
-  
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizDB",
-    "UbuntuConnection" : "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=SQL5008.site4now.net;Initial Catalog=DB_A46E72_QuizDB;User Id=DB_A46E72_QuizDB_admin;Password=quizdb1989;"
+    //"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizDB",
+    //"UbuntuConnection": "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
   },
   
   "Logging": {
