--- a/Quiz.Utils/Quiz.Utils.csproj
+++ b/Quiz.Utils/Quiz.Utils.csproj
@@ -5,4 +5,8 @@
         <RootNamespace>QuizUtils</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.App" />
+    </ItemGroup>
+
 </Project>
