--- a/Quiz.Api/Quiz.Api.csproj
+++ b/Quiz.Api/Quiz.Api.csproj
@@ -35,4 +35,8 @@
       <Content Remove="Log\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\Account\" />
+    </ItemGroup>
+
 </Project>
