--- a/Quiz.Data/Quiz.Data.csproj
+++ b/Quiz.Data/Quiz.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -8,6 +8,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1.0" />
+        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.1.1" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     </ItemGroup>
     
