--- a/Quiz.Repository/Quiz.Repository.csproj
+++ b/Quiz.Repository/Quiz.Repository.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -7,7 +7,9 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.1" />
         <PackageReference Include="NEST" Version="6.5.1" />
     </ItemGroup>
 
