--- a/Quiz.Api/appsettings.json
+++ b/Quiz.Api/appsettings.json
@@ -1,15 +1,18 @@
 {
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "Secret": "iNivDmHLpUA223sqsfhqGbMRdRj1PVkH"
+  },
+
+  "JwtIssuerOptions": {
+    "Issuer": "webApi",
+    "Audience": "http://localhost:5000/"
   },
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizDB",
     "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizIdentityDB"
-    //"DefaultConnection": "Data Source=SQL5008.site4now.net;Initial Catalog=DB_A46E72_QuizDB;User Id=DB_A46E72_QuizDB_admin;Password=quizdb1989;"
-    //"UbuntuConnection": "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
   },
-  
+
   "Logging": {
     "LogLevel": {
       "Default": "None",
@@ -21,5 +24,7 @@
     "index": "quiz",
     "url": "http://localhost:9200/"
   }
-  
 }
+
+//"DefaultConnection": "Data Source=SQL5008.site4now.net;Initial Catalog=DB_A46E72_QuizDB;User Id=DB_A46E72_QuizDB_admin;Password=quizdb1989;"
+//"UbuntuConnection": "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
