minor changes related with Logging.

--- a/Quiz.Api/nlog.config
+++ b/Quiz.Api/nlog.config
@@ -3,10 +3,10 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="/home/ando/Desktop/work/QuizAppB/Quiz.Api/Log/internallog.txt">
+      internalLogFile="D:\5 Core\QuizAppB\Quiz.Api\Log\internallog.txt">
 
     <targets>
-        <target name="logfile" xsi:type="File" fileName="/home/ando/Desktop/work/QuizApp/Quiz.Api/Log/${shortdate}_logfile.txt" layout="${longdate} ${level:uppercase=true} ${message}"/>
+        <target name="logfile" xsi:type="File" fileName="D:\5 Core\QuizAppB\Quiz.Api\Log/${shortdate}_logfile.txt" layout="${longdate} ${level:uppercase=true} ${message}"/>
     </targets>
 
     <rules>
