--- a/Quiz.Mvc/nlog.config
+++ b/Quiz.Mvc/nlog.config
@@ -3,10 +3,10 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="D:\5 Core\QuizApp\Quiz.Mvc\Log\internallog.txt">
+      internalLogFile="D:\5 Core\QuizAppB\Quiz.Mvc\Log\internallog.txt">
 
     <targets>
-        <target name="logfile" xsi:type="File"  fileName="D:\5 Core\QuizApp\Quiz.Mvc\Log/${shortdate}_logfile.txt" layout="${longdate} ${level:uppercase=true} ${message}"/>
+        <target name="logfile" xsi:type="File"  fileName="D:\5 Core\QuizAppB\Quiz.Mvc\Log/${shortdate}_logfile.txt" layout="${longdate} ${level:uppercase=true} ${message}"/>
     </targets>
 
     <rules>
