--- a/Quiz.Mvc/appsettings.json
+++ b/Quiz.Mvc/appsettings.json
@@ -4,16 +4,23 @@
   },
 
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=SQL5008.site4now.net;Initial Catalog=DB_A46E72_QuizDB;User Id=DB_A46E72_QuizDB_admin;Password=quizdb1989;"
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizDB"
-    //"UbuntuConnection" : "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizDB",
+    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizIdentityDB"
   },
-  
+
   "Logging": {
     "LogLevel": {
       "Default": "None",
       "Microsoft.EntityFrameworkCore": "Information"
     }
   }
-  
 }
+
+//"DefaultConnection": "Data Source=SQL5008.site4now.net;Initial Catalog=DB_A46E72_QuizDB;User Id=DB_A46E72_QuizDB_admin;Password=quizdb1989;"
+//"UbuntuConnection": "Server=localhost;Database=QuizDB; User Id=sa; Password=*ando*1989; MultipleActiveResultSets=true"
+
+//"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizDB",
+//"IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=QuizIdentityDB"
+
+//"DefaultConnection": "Data Source=SQL5039.site4now.net;Initial Catalog=DB_A46E72_QuizDB;User Id=DB_A46E72_QuizDB_admin;Password=quizdb1989;",
+//"IdentityConnection": "Data Source=SQL5036.site4now.net;Initial Catalog=DB_A46E72_QuizIdentityDB;User Id=DB_A46E72_QuizIdentityDB_admin;Password=quizdb1989;"
